base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-ms-service
  labels:
    backstage.io/kubernetes-id: go-ms
spec:
  selector:
    app: go-ms
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
