base/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ms-ingress
  labels:
    backstage.io/kubernetes-id: go-ms
spec:
  rules:
  - host: go-ms.127.0.0.1.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-ms-service
            port:
              number: 3000
